; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/carthw/svp/extr_......cpudrcemit_arm.c_emith_op_imm2.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/carthw/svp/extr_......cpudrcemit_arm.c_emith_op_imm2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@A_OP_MVN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32, i32, i32, i32)* @emith_op_imm2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @emith_op_imm2(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %15 = load i32, i32* %9, align 4
  switch i32 %15, label %33 [
    i32 130, label %16
    i32 131, label %25
    i32 128, label %25
    i32 133, label %25
    i32 129, label %25
    i32 132, label %25
  ]

16:                                               ; preds = %6
  store i32 0, i32* %11, align 4
  %17 = load i32, i32* %12, align 4
  %18 = xor i32 %17, -1
  %19 = icmp ult i32 %18, 65536
  br i1 %19, label %20, label %24

20:                                               ; preds = %16
  %21 = load i32, i32* %12, align 4
  %22 = xor i32 %21, -1
  store i32 %22, i32* %12, align 4
  %23 = load i32, i32* @A_OP_MVN, align 4
  store i32 %23, i32* %9, align 4
  br label %24

24:                                               ; preds = %20, %16
  br label %33

25:                                               ; preds = %6, %6, %6, %6, %6
  %26 = load i32, i32* %8, align 4
  %27 = icmp eq i32 %26, 0
  br i1 %27, label %28, label %32

28:                                               ; preds = %25
  %29 = load i32, i32* %12, align 4
  %30 = icmp eq i32 %29, 0
  br i1 %30, label %31, label %32

31:                                               ; preds = %28
  br label %82

32:                                               ; preds = %28, %25
  br label %33

33:                                               ; preds = %6, %32, %24
  %34 = load i32, i32* %12, align 4
  store i32 %34, i32* %14, align 4
  store i32 0, i32* %13, align 4
  br label %35

35:                                               ; preds = %79, %33
  br label %36

36:                                               ; preds = %49, %35
  %37 = load i32, i32* %14, align 4
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %44

39:                                               ; preds = %36
  %40 = load i32, i32* %14, align 4
  %41 = and i32 %40, 3
  %42 = icmp ne i32 %41, 0
  %43 = xor i1 %42, true
  br label %44

44:                                               ; preds = %39, %36
  %45 = phi i1 [ false, %36 ], [ %43, %39 ]
  br i1 %45, label %46, label %52

46:                                               ; preds = %44
  %47 = load i32, i32* %13, align 4
  %48 = add nsw i32 %47, -1
  store i32 %48, i32* %13, align 4
  br label %49

49:                                               ; preds = %46
  %50 = load i32, i32* %14, align 4
  %51 = ashr i32 %50, 2
  store i32 %51, i32* %14, align 4
  br label %36

52:                                               ; preds = %44
  %53 = load i32, i32* %7, align 4
  %54 = load i32, i32* %9, align 4
  %55 = load i32, i32* %8, align 4
  %56 = load i32, i32* %11, align 4
  %57 = load i32, i32* %10, align 4
  %58 = load i32, i32* %13, align 4
  %59 = and i32 %58, 15
  %60 = load i32, i32* %14, align 4
  %61 = and i32 %60, 255
  %62 = call i32 @EOP_C_DOP_IMM(i32 %53, i32 %54, i32 %55, i32 %56, i32 %57, i32 %59, i32 %61)
  %63 = load i32, i32* %14, align 4
  %64 = ashr i32 %63, 8
  store i32 %64, i32* %14, align 4
  %65 = load i32, i32* %14, align 4
  %66 = icmp eq i32 %65, 0
  br i1 %66, label %67, label %68

67:                                               ; preds = %52
  br label %82

68:                                               ; preds = %52
  %69 = load i32, i32* %9, align 4
  %70 = icmp eq i32 %69, 130
  br i1 %70, label %71, label %72

71:                                               ; preds = %68
  store i32 129, i32* %9, align 4
  br label %72

72:                                               ; preds = %71, %68
  %73 = load i32, i32* %9, align 4
  %74 = load i32, i32* @A_OP_MVN, align 4
  %75 = icmp eq i32 %73, %74
  br i1 %75, label %76, label %77

76:                                               ; preds = %72
  store i32 132, i32* %9, align 4
  br label %77

77:                                               ; preds = %76, %72
  %78 = load i32, i32* %10, align 4
  store i32 %78, i32* %11, align 4
  br label %79

79:                                               ; preds = %77
  %80 = load i32, i32* %13, align 4
  %81 = sub nsw i32 %80, 4
  store i32 %81, i32* %13, align 4
  br label %35

82:                                               ; preds = %31, %67
  ret void
}

declare dso_local i32 @EOP_C_DOP_IMM(i32, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
